# server-cpp-vs-rust

./: Readme.md  build_cpp_vs_rust.sh  perf_test_cpp_vs_rust.py
task-processing-system-cpp/: Doxyfile  Makefile  Readme.md  config.json  manual_test_rs.sh
task-processing-system-cpp/src/: calculations.cpp  calculations.h  main.cpp  orchestrator.cpp  orchestrator.h  task.cpp  task.h  worker.cpp  worker.h
task-processing-system-cpp/tests/: integration_test.py  performance_test.py  unit_tests.cpp
task-processing-system-rs/: Cargo.toml  Readme.md  config.toml
task-processing-system-rs/benches/: task_benchmarks.rs
task-processing-system-rs/examples/: client_example.rs  load_test.rs
task-processing-system-rs/src/: calculations.rs  lib.rs  main.rs  orchestrator.rs  types.rs  worker.rs
task-processing-system-rs/tests/: integration_tests.rs
